<!--
  ~    © Copyright 2016 IBM Corp.
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">RecordApp</string>
    <string name="title_activity_available_gestures">AvailableGesturesActivity</string>
    <string name="main_activity_title">Available gestures</string>
    <string name="new_gesture_title">Create new gesture</string>
    <string name="testing_title">Gestures testing</string>
    <string name="result_title">Record completed</string>
    <string name="recording_title">Recording gesture</string>
    <string name="test">Test</string>
    <string name="no_available_gestures">No available gestures, click \'ADD GESTURE \' button to record new gesture.</string>
    <string name="start_recording">Start Recording</string>
    <string name="enter_new_gesture_name">Enter new gesture name</string>
    <string name="finish_recording">Finish Recording</string>
    <string name="continue_recording">Continue</string>
    <string name="end_recording">End</string>
    <string name="algorithm_done">Your algorithm has been generated.</string>
    <string name="done">Done</string>
    <string name="sensing">Sensing...</string>
    <string name="add_gesture">Add Gesture</string>
    <string name="detected_gesture_text_holder">%s</string>
    <string name="gesture_score">%s%%</string>
    <string name="iteration_number">Iteration %d</string>
    <string name="status">%s</string>
    <string name="counter">%d</string>
    <string name="get_ready_status">Get Ready</string>
    <string name="recording_status">Recording</string>
    <string name="validating_status">Validating</string>
    <string name="iteration_failed_status">Iteration Failed!</string>
    <string name="iteration_failed_error">"Iteration Failed: "</string>
    <string name="iteration_accepted_status">Iteration Accepted!</string>
    <string name="no_recorded_gestures">No available recorded gestures for testing.</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="delete">Delete</string>
    <string name="select_action">Select Action</string>
</resources>
